# KeepingYouAwake

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Configuration.xcconfig  Credits.rtf  README.de.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  appcast.xml  index.html  pytest.ini  socket.yml
.claude/: terminal-state.json
.github/workflows/: appcast.yml  ci.yml  codeql.yml  release.yml  scorecards.yml
.serena/: project.yml
KeepingYouAwake/: DefaultTestPlan.xctestplan  Info.plist  InfoPlist.xcstrings  KYALocalizedStrings.m  KeepingYouAwake.sdef  Localizable.xcstrings  SanitizerTestPlan.xctestplan
KeepingYouAwake.xcodeproj/: project.pbxproj
KeepingYouAwake.xcworkspace/: contents.xcworkspacedata
KeepingYouAwake/AppIcon.icon/: icon.json
KeepingYouAwake/KYAActivationDurationsMenuController/: KYAActivationDurationsMenuController.m
KeepingYouAwake/KYAAppController/: KYAActivationOwnership.h  KYAActivationOwnership.m  KYAActivationSource.h  KYAActivationSource.m  KYAAppController.m  KYAAppDelegate.h  KYAAppDelegate.m  KYAWatchedApplications.h  KYAWatchedApplications.m
KeepingYouAwake/KYAAppUpdater/: KYAAppUpdater.m
KeepingYouAwake/KYADriveAlive/: KYADriveAliveTimer.h  KYADriveAliveTimer.m
KeepingYouAwake/KYAMainMenu/: KYAMainMenu.m
KeepingYouAwake/KYAScripting/: KYAScripting.h  KYAScripting.m
KeepingYouAwake/Settings/: KYASettingsLocalizedStrings.m
KeepingYouAwakeTests/: KYAActivationOwnershipTests.m  KYAActivationSourceTests.m  KYAScriptingCommandTests.m  KYAWatchedApplicationsTests.m
docs/: sparkle-auto-update-setup.md
scripts/: generate-appcast.py
tools/: conftest.py
tools/cli/: README.md  kya.py  pyproject.toml
tools/cli/tests/: test_kya.py
tools/mcp-server/: README.md  kya_mcp_server.py  pyproject.toml
tools/mcp-server/tests/: test_kya_mcp_server.py
(+7 files in other folders)
