[project]
name = "kya-mcp-server"
version = "0.1.0"
description = "MCP server for KeepingYouAwake (Amphetamine) — drives the macOS keep-awake utility from Claude Code and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryoka Nakai", email = "ryouka0731@gmail.com" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
kya-mcp-server = "kya_mcp_server:main"

[project.urls]
Homepage = "https://github.com/ryouka0731/KeepingYouAwake-Amphetamine"
Repository = "https://github.com/ryouka0731/KeepingYouAwake-Amphetamine"
Issues = "https://github.com/ryouka0731/KeepingYouAwake-Amphetamine/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["kya_mcp_server.py"]

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["kya_mcp_server.py"]
